# MatchMyTutor

./: .env.example  .gitignore  README.md  db.sqlite3  hello.py  manage.py  pyproject.toml  requirements.txt
mystite/: asgi.py  settings.py  urls.py  wsgi.py
peer_tutor/: admin.py  apps.py  consumers.py  context_processors.py  email_utils.py  forms.py  models.py  urls.py  views.py
peer_tutor/api/: filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
peer_tutor/migrations/: 0001_initial.py  0002_rename_subjects_student_password.py  0003_studentprofile.py  0004_remove_studentprofile_subjects_can_teach_and_more.py  0005_availability_booking_event_slot_delete_student_and_more.py  0006_remove_availability_day_of_week_availability_date.py  0007_remove_booking_status_booking_created_at.py  0008_delete_event.py  0009_review_subject_userprofile_and_more.py
peer_tutor/static/peer_tutor/: availability_calendar.css  available_slots.css  enter_subjects.css  enter_tutor_subjects.css  global.css  home.css  login.css  matching_tutors.css  set_availability.css  signup.css  student_calendar.css  student_page.css  tutor_calendar.css  tutor_page.css  user_profile.css
peer_tutor/templates/peer_tutor/: add_review.html  availability_calendar.html  available_slots.html  base.html  calendar.html  dashboard.html  enter_subjects.html  enter_tutor_subjects.html  home.html  login.html  manage_bookings.html  matching_tutors.html  set_availability.html  signup.html  student_bookings.html  student_calendar.html  student_page.html  tutor_calendar.html  tutor_page.html  (+2 more)
